1) change nav_container selector from id to class 2) add a variant on nav_container, called nav_container_sm for sub menus 3) add a bottom border the same color as the background to all li elements to avoid jumping when one is hovered (and underlined)

--- a/src/KeyCdr.UI.Web/assets/css/header.scss
+++ b/src/KeyCdr.UI.Web/assets/css/header.scss
@@ -62,7 +62,7 @@
 	}
 }
 	
-#nav_container {
+.nav_container {
 	margin:10px 0px 0px 0px;
 	color:black;
 	font-size:1em;
@@ -90,6 +90,7 @@
 			list-style-type: none; 
 			padding:5px 17px 5px 17px;
 			text-align:center;
+            border-bottom: solid $COLOR_BACKGROUND 2px;
 
 			a {
 				text-decoration:none;
@@ -107,5 +108,15 @@
 			border-bottom:solid $COLOR_PRIMARY 2px;
 		}
 	}
+}
+
+.nav_container_sm {
+    @extend .nav_container;
+    font-size:small;
+    margin:0px 55px 0px 0px;
+
+    li {
+        padding:4px;
+    }
 }
 	
